Uncollapse sections on selection
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/themes/kubermatic-docs/layouts/partials/menu.html
+++ b/themes/kubermatic-docs/layouts/partials/menu.html
@@ -123,7 +123,7 @@
       {{ safeHTML .Params.head }}
       <li data-nav-id="{{ .RelPermalink }}" title="{{ .Title }}" class="dd-item
         {{ if .IsAncestor $currentNode }}parent{{ end }}
-        {{ with .File }}{{ $f := . }}{{ with $currentNode.File }}{{ if eq $f.UniqueID .UniqueID }}active{{ end }}{{ end }}{{ end }}
+        {{ with .File }}{{ $f := . }}{{ with $currentNode.File }}{{ if eq $f.UniqueID .UniqueID }}active parent{{ end }}{{ end }}{{ end }}
         {{ if .Params.alwaysopen }}parent{{ end }}
         ">
         <a href="{{ .RelPermalink }}">
