--- a/themes/kubermatic-docs/assets/scss/_main-header.scss
+++ b/themes/kubermatic-docs/assets/scss/_main-header.scss
@@ -331,7 +331,7 @@
     transition: transform .3s ease;
     ul {
       padding-top: 14px;
-      &.mobile-menu-childs {
+      &.mobile-menu-children {
         position: static;
         width: auto;
         padding: 15px 0 23px;
