--- a/themes/kubermatic-docs/assets/scss/_theme-kubermatic.scss
+++ b/themes/kubermatic-docs/assets/scss/_theme-kubermatic.scss
@@ -25,7 +25,7 @@
     --MENU-SEARCH-BOX-color: #33a1ff; /* Override search field border color */
     --MENU-SEARCH-BOX-ICONS-color:#7e868f; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#fff; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-ACTIVE-BG-color:#fff; /* Background color of the active section and its children */
     --MENU-SECTIONS-BG-color:#F6F6F6; /* Background color of other sections */
     --MENU-SECTIONS-LINK-color: #0288d1; /* Color of links in menu */
     --MENU-SECTIONS-LINK-HOVER-color: #0f3c55;  /* Color of links in menu, when hovered */
