--- a/themes/kubermatic-docs/layouts/partials/cookie-banner.html
+++ b/themes/kubermatic-docs/layouts/partials/cookie-banner.html
@@ -1,5 +1,5 @@
 {{$isProduction := hugo.IsProduction | or (eq .Site.Params.env "production")}}
 
-{{with and $isProduction .Site.Params.cookiefirstBanner}}
-<script src="https://consent.cookiefirst.com/banner.js" data-cookiefirst-key="{{.}}"></script>
+{{with and $isProduction .Site.Params.cookiefirstScript}}
+<script src="{{.}}"></script>
 {{end}}
