--- a/themes/kubermatic-docs/assets/scss/_theme-kubermatic.scss
+++ b/themes/kubermatic-docs/assets/scss/_theme-kubermatic.scss
@@ -13,6 +13,7 @@
     --BADGE-BG-color: #d8d8db;
     --BADGE-BG-warning-color: #f7b500;
     --WHITE-color:#fff;
+    --GOLD-color:#ffad05;
 
     --MAIN-TITLES-TEXT-color: #323232; /* Color of titles h2-h3-h4-h5 */
     --MAIN-LINK-color:#1C90F3; /* Color of links */
