fix value name after spellcheck
Signed-off-by: serg <contact@sergfurtak.com>

--- a/themes/kubermatic-docs/layouts/partials/main-header.html
+++ b/themes/kubermatic-docs/layouts/partials/main-header.html
@@ -188,7 +188,7 @@
       {{end}}
     </ul>
     {{end}}
-    {{with .childs}}
+    {{with .children}}
     <ul class="mobile-menu-children">
       {{range .}}
         <li>
