--- a/themes/kubermatic-docs/assets/scss/_nucleus.scss
+++ b/themes/kubermatic-docs/assets/scss/_nucleus.scss
@@ -23,7 +23,6 @@ body {
 
 article,
 aside,
-details,
 figcaption,
 figure,
 footer,
@@ -31,8 +30,7 @@ header,
 hgroup,
 main,
 nav,
-section,
-summary {
+section {
   display: block; }
 
 audio,
